ambassador/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ambassador
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
    - http:
        paths:
          - path: /grafana/
            pathType: Prefix
            backend:
              serviceName: grafana
              servicePort: 3000
    - http:
        paths:
          - path: /prometheus/
            backend:
              serviceName: prometheus-operated
              servicePort: 9090
